# embedding-models

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  embedding_models.py  pyproject.toml  utils.py
.github/: pull_request_template.md
.github/workflows/: lint.yml
